# Isonga-Platform

./: Comment.docx  IMPLEMENTATION_PLAN.md  QUICK_START_GUIDE.md  README.md
backend/: .env  MODELS_TO_CREATE.md  create_dummy_investor.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_user_type.py  0003_alter_user_phone_number_alter_user_username.py  0004_auto_20260206_1035.py  0005_alter_user_phone_number.py  0006_alter_user_managers.py
backend/admin_dashboard/: urls.py  views.py
backend/assessments/: admin.py  ai_utils.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/assessments/migrations/: 0001_initial.py  0002_questionnaire_language.py  0003_questionnaire_category_and_more.py  0004_assessment_ai_generated_at_assessment_ai_strengths_and_more.py  0005_add_translation_fields.py  0006_remove_questionnaire_target_enterprise_sizes_and_more.py  0007_questionrecommendation.py  0008_add_service_model_and_recommended_services.py  (+1 more)
backend/campaigns/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/core/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/enterprises/: admin.py  models.py  serializers.py  urls.py  views.py
backend/investors/: admin.py  models.py  serializers.py  urls.py  views.py
backend/isonga/: asgi.py  settings.py  urls.py  wsgi.py
backend/payments/: admin.py  models.py  serializers.py  urls.py  views.py
(+133 files in other folders)
